@@ -25,5 +25,6 @@ typedef struct 		s_env
 
 char 	*dup_rest(char *s, int start);
 char	*ft_strdup_till_c(const char *s1, char c);
+char 	*ft_get_cwd(t_env *env);
 
 #endif
